Correcting button text.

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 
 		<div class="row mt-5" id="buttonRow">
 			<div class="col-12 text-center">
-          			<button class="btn btn-primary btn-xl btn-block">Destroy your challenges: Click here for an exclusive online offer</button>
+          			<button class="btn btn-primary btn-xl btn-block">Claim your exclusive online offer</button>
         		</div>
 		</div>	
 	<!-- footer -->
